    -> changed check for mail addresses (patch 1403922)
    -> fixed JPG upload when MCrypt is enabled
    -> fixed login problems for AD servers
    -> improved sorting of account lists
    -> fixed language setting in default configuration profile
    -> fixed PHP5 warnings (getdate() and mktime())
    -> error messages in Samba domain module (1437425)


08.02.2006 1.0.rc2
   - new translation: Dutch
   - fixed bugs:
    -> changed check for mail addresses (patch 1403922)
    -> fixed JPG upload when MCrypt is enabled
    -> fixed login problems for AD servers


09.01.2006 1.0.rc1
   - new architecture with support for more account types
   - new translation: Traditional Chinese
   - fixed bugs:
    -> Samba groups: editing of special groups fixed


14.12.2005 0.5.3
   - accounts are now deleted with subentries
   - big update for Italian translation
   - inetOrgPerson: support jpegPhoto images
   - less restrictive input checks
   - fixed bugs:
    -> fixed problems with case-insensitive DNs
    -> file upload did not work when max_execution_time=0 (1367957)
    -> posixGroup: fixed help entries


16.11.2005 0.5.2
   - New module for SSH public keys
   - check file permissions on login page
   - fixed bugs:
    -> creation of home directories did not work
    -> allow spaces in profile names (1333058)
    -> fixed problem with magic_quotes_gpc in profile editor (1333069)    
    -> inetOrgPerson: deletion of postal address and fax number now works


19.10.2005 0.5.1
   - Samba 3: added support for account expiration
   - fixed bugs:
    -> automatic UID/GID assignment did not fully work
    -> PDF: additional groups for Unix users
    -> inetOrgPerson: fixed mobile number
    -> Samba 2/3: passwords fixed for file uploads (1311561)
    -> Samba 3: fixed logon hours (patch 1311915)
    -> Samba 3: loading of domain setting from profile did not work
    -> Quota: profile settings fixed
    -> reduced memory usage


28.09.2005 0.5.0